--- a/css/style.css
+++ b/css/style.css
@@ -456,7 +456,7 @@ Topbar
 
 #header .header-inner #logo a .logo-default, #header #header-wrap #logo a .logo-default { display: block; }
 
-#header .header-inner #logo a, #header .header-inner #logo a span, #header #header-wrap #logo a, #header #header-wrap #logo a span { font-family: inherit; font-size: 40px; color: #1e2022; font-weight: 800; letter-spacing: 1.5px; }
+#header .header-inner #logo a, #header .header-inner #logo a span, #header #header-wrap #logo a, #header #header-wrap #logo a span { font-family: inherit; font-size: 30px; color: #1e2022; font-weight: 800; letter-spacing: 1.5px; }
 
 #header[data-fullwidth="true"] .header-inner .container, #header[data-fullwidth="true"] #header-wrap .container { max-width: 100%; padding: 0 30px; }
 
@@ -6740,6 +6740,10 @@ body[data-bg-image] { background-attachment: fixed; background-position: top cen
 
 @media (max-width: 575.98px) { .wizard > .steps ul { -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
   .wizard > .steps ul li { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; margin-bottom: 10px; } }
+
+#logo span{
+  font-size:20px !important;
+}
 
 .card .card-body .wizard { padding: 1rem; }
 
